--- a/GoodGameCompany - NEWS/templates/Haters Be Damned Elden Ring Summoning Leads To Shadow Of The Erdtrees Best Moment.html
+++ b/GoodGameCompany - NEWS/templates/Haters Be Damned Elden Ring Summoning Leads To Shadow Of The Erdtrees Best Moment.html
@@ -58,34 +58,20 @@
 </nav>
 
 
-<div class="container">
-  <div class="row">
-
   <div class="col-sm-6 mb-3 mb-sm-0">
     <div class="card">
       <div class="card-body">
-            <img src="{{url_for('static',filename='img/7.png')}}" class="img-fluid" alt="...">
-        <h5 class="card-title">Xbox Servers Are Back Up After Extended Downtime</h5>
-        <p class="card-text">Xbox's online servers went down on July 2, with some people reporting that they are having difficulty connecting to games and services on the platform. The issues were widespread and long-lived, as it took Microsoft hours to clear out the issues and get things working aga...</p>
-        <a href="http://127.0.0.1:5000/Xbox Servers Are Back Up After Extended Downtime" class="btn btn-primary">Read</a>
+            <img src="{{url_for('static',filename='img/14.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Haters Be Damned: Elden Ring Summoning Leads To Shadow Of The Erdtree's Best Moment</h5>
+        <p class="card-text">Igon is the best character in Shadow of the Erdtree. He's the best character in all of Elden Ring, in fact. He might be the best character in any From Software game. And if you're the kind of person who makes "git gud" a cornerstone of your personality, you probably missed out on him. You find Igon at the base of the Jagged Peak, and at first, he's kind of a pathetic figure. He's already injured when you discover him, and from his wailing laments, you learn that he's trying to kill a huge and horrific dragon called Bayle the Dread. Apparently, Bayle already kicked Igon's ass and he can no longer walk, so being the very nice person that you are, you leave him crying on the side of the road. You might have thought Igon was a sad, broken man, but you haven't yet seen the depths of his resolve. Later, as you climb the mountain, you slay a few dragons who stand in your way--first one, alone, and then two together. After winning the battle against two dragons at once, you hear laughter. It's Igon, and seeing your performance convinces him that you're the partner he's been waiting for. He cuts off his own finger--that's how summoning NPCs works in Elden Ring--and gives it to you, begging you to summon his soul in your fight against Bayle.
+
+And reader, you should absolutely summon Igon in the fight against Bayle.
+
+There are those players who are resistant to using summons, whether they're NPCs, spirit ashes, or other players. The release of Shadow of the Erdtree has rekindled a lot of discussion around the practice, thanks to the perception among many that the DLC expansion can be annoyingly difficult. It does, at times, feel a little uneven, especially because of its half-baked Scadutree Fragment leveling system that's both wholly separate from traditional leveling and highly dependent on exploration and, to some degree, luck, in order to advance.</p>
       </div>
     </div>
   </div>
 
-    <div class="col-sm-6 mb-3 mb-sm-0">
-    <div class="card">
-      <div class="card-body">
-            <img src="{{url_for('static',filename='img/12.png')}}" class="img-fluid" alt="...">
-        <h5 class="card-title">PlayStation Plus Free Games For July 2024 Are Live Now</h5>
-        <p class="card-text">PlayStation has released this month's batch of free games for PlayStation Plus subscribers: Borderlands 3, NHL 24, and Among Us. A fun sequel to Gearbox's excellent shoot-and-loot games, the story of Borderlands 3 revolves around a cult known as The Children of the Vault...</p>
-        <a href="http://127.0.0.1:5000/PlayStation Plus Free Games For July 2024 Are Live Now'" class="btn btn-primary">Read</a>
-      </div>
-    </div>
-  </div>
-
-
-</div>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
