--- a/GoodGameCompany - NEWS/templates/Metal Gear Rising Revengeance Slashes A Power Hungry Senator And Its Own Price In New GOG Deal.html
+++ b/GoodGameCompany - NEWS/templates/Metal Gear Rising Revengeance Slashes A Power Hungry Senator And Its Own Price In New GOG Deal.html
@@ -58,34 +58,21 @@
 </nav>
 
 
-<div class="container">
-  <div class="row">
 
   <div class="col-sm-6 mb-3 mb-sm-0">
     <div class="card">
       <div class="card-body">
-            <img src="{{url_for('static',filename='img/7.png')}}" class="img-fluid" alt="...">
-        <h5 class="card-title">Xbox Servers Are Back Up After Extended Downtime</h5>
-        <p class="card-text">Xbox's online servers went down on July 2, with some people reporting that they are having difficulty connecting to games and services on the platform. The issues were widespread and long-lived, as it took Microsoft hours to clear out the issues and get things working aga...</p>
-        <a href="http://127.0.0.1:5000/Xbox Servers Are Back Up After Extended Downtime" class="btn btn-primary">Read</a>
+            <img src="{{url_for('static',filename='img/13.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Metal Gear Rising: Revengeance Slashes A Power-Hungry Senator And Its Own Price In New GOG Deal</h5>
+        <p class="card-text">One of the best action games of the 2010s just got its price slashed almost in half, as you can pick up Metal Gear Rising: Revengeance for just $18 on GOG, until July 11. Like other GOG games, this is a DRM-free version of the classic Platinum Games adventure starring Raiden, and it comes with several other bonus features. A spin-off from the Metal Gear Solid series, Metal Gear Rising follows Raiden, a cyborg ninja armed with a high-frequency sword, as he cuts a bloody path through anything that stands in his way. Unlike its source material, Metal Gear Rising tosses stealth out of a skyscraper window and goes all in on its premise of lightning-fast action. Over the last few years, the game has seen a resurgence in interest thanks to its polished action, killer soundtrack, and exciting boss fights.
+
+This release also includes all the extra VR missions alongside the story expansions for Blade Wolf and Jetstream Sam. You'll also get all cosmetic armor sets for Raiden, including his White, Inferno, Commando, Metal Gear Solid 4, and Cyborg Ninja skins. Additionally, there are options to rewatch all of the game's cutscenes, listen to every codec conversation, and tweak the graphics.
+
+The game runs just fine on mobile gaming PCs like the ROG Ally, making this a fun title to install and take with you on trips. Just remember to shout "rules of nature" when you block a Metal Gear Ray attack in the game's opening level.</p>
       </div>
     </div>
   </div>
 
-    <div class="col-sm-6 mb-3 mb-sm-0">
-    <div class="card">
-      <div class="card-body">
-            <img src="{{url_for('static',filename='img/12.png')}}" class="img-fluid" alt="...">
-        <h5 class="card-title">PlayStation Plus Free Games For July 2024 Are Live Now</h5>
-        <p class="card-text">PlayStation has released this month's batch of free games for PlayStation Plus subscribers: Borderlands 3, NHL 24, and Among Us. A fun sequel to Gearbox's excellent shoot-and-loot games, the story of Borderlands 3 revolves around a cult known as The Children of the Vault...</p>
-        <a href="http://127.0.0.1:5000/PlayStation Plus Free Games For July 2024 Are Live Now'" class="btn btn-primary">Read</a>
-      </div>
-    </div>
-  </div>
-
-
-</div>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
