--- a/GoodGameCompany - NEWS/templates/PC Games.html
+++ b/GoodGameCompany - NEWS/templates/PC Games.html
@@ -57,6 +57,63 @@
   </div>
 </nav>
 
+
+<div class="container">
+  <div class="row">
+
+
+
+    <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+            <img src="{{url_for('static',filename='img/13.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Metal Gear Rising: Revengeance Slashes A Power-Hungry Senator And Its Own Price In New GOG Deal</h5>
+        <p class="card-text">"One of the best action games of the 2010s just got its price slashed almost in half, as you can pick up Metal Gear Rising: Revengeance for just $18 on GOG, until July 11. Like other GOG games, this is a DRM-free version of the classic Platinum Games adventure starring Rai...</p>
+        <a href="http://127.0.0.1:5000/Metal Gear Rising Revengeance Slashes A Power Hungry Senator And Its Own Price In New GOG Deal" class="btn btn-primary">Read</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+            <img src="{{url_for('static',filename='img/8.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Destiny 2 Claws Of The Wolf God Roll Guide</h5>
+        <p class="card-text">The Iron Banner is back and it brings a reprised version of a deadly pulse rifle you're going to want. Like everything else in Destiny 2 in the aftermath of The Final Shape, the Iron Banner has been altered. The PvP event now sports a two-week duration instead of one and...</p>
+        <a href="#" class="btn btn-primary">Read</a>
+      </div>
+    </div>
+  </div>
+
+    <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+            <img src="{{url_for('static',filename='img/10.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Dragon Age: The Veilguard Has A "No Death" Setting</h5>
+        <p class="card-text">"It's an option to make sure players of all abilities can show up." BioWare's upcoming fantasy RPG, Dragon Age: The Veilguard, has a lot of changes to the way combat works, and one of them is a "no death" setting that allows players to avoid having their character die mid...</p>
+        <a href="#" class="btn btn-primary">Read</a>
+      </div>
+    </div>
+  </div>
+
+        <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+            <img src="{{url_for('static',filename='img/14.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Haters Be Damned: Elden Ring Summoning Leads To Shadow Of The Erdtree's Best Moment</h5>
+        <p class="card-text">"Drake Hunter Igon is the best character in Shadow of the Erdtree, and he's the perfect argument for chilling out about using summons and game difficulty.Igon is the best character in Shadow of the Erdtree. He's the best character in all of Elden Ring, in fact. He might be...</p>
+        <a href="http://127.0.0.1:5000/Haters Be Damned Elden Ring Summoning Leads To Shadow Of The Erdtrees Best Moment" class="btn btn-primary">Read</a>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+</div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
