--- a/GoodGameCompany - NEWS/templates/PS Console.html
+++ b/GoodGameCompany - NEWS/templates/PS Console.html
@@ -57,6 +57,26 @@
   </div>
 </nav>
 
+
+<div class="container">
+  <div class="row">
+
+
+    <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+            <img src="{{url_for('static',filename='img/12.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">PlayStation Plus Free Games For July 2024 Are Live Now</h5>
+        <p class="card-text">PlayStation has released this month's batch of free games for PlayStation Plus subscribers: Borderlands 3, NHL 24, and Among Us. A fun sequel to Gearbox's excellent shoot-and-loot games, the story of Borderlands 3 revolves around a cult known as The Children of the Vault...</p>
+        <a href="http://127.0.0.1:5000/PlayStation Plus Free Games For July 2024 Are Live Now'" class="btn btn-primary">Read</a>
+      </div>
+    </div>
+  </div>
+
+
+</div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
