--- a/GoodGameCompany - NEWS/templates/PlayStation Plus Free Games For July 2024 Are Live Now.html
+++ b/GoodGameCompany - NEWS/templates/PlayStation Plus Free Games For July 2024 Are Live Now.html
@@ -57,35 +57,29 @@
   </div>
 </nav>
 
-
-<div class="container">
-  <div class="row">
-
-  <div class="col-sm-6 mb-3 mb-sm-0">
-    <div class="card">
-      <div class="card-body">
-            <img src="{{url_for('static',filename='img/7.png')}}" class="img-fluid" alt="...">
-        <h5 class="card-title">Xbox Servers Are Back Up After Extended Downtime</h5>
-        <p class="card-text">Xbox's online servers went down on July 2, with some people reporting that they are having difficulty connecting to games and services on the platform. The issues were widespread and long-lived, as it took Microsoft hours to clear out the issues and get things working aga...</p>
-        <a href="http://127.0.0.1:5000/Xbox Servers Are Back Up After Extended Downtime" class="btn btn-primary">Read</a>
-      </div>
-    </div>
-  </div>
-
     <div class="col-sm-6 mb-3 mb-sm-0">
     <div class="card">
       <div class="card-body">
             <img src="{{url_for('static',filename='img/12.png')}}" class="img-fluid" alt="...">
         <h5 class="card-title">PlayStation Plus Free Games For July 2024 Are Live Now</h5>
-        <p class="card-text">PlayStation has released this month's batch of free games for PlayStation Plus subscribers: Borderlands 3, NHL 24, and Among Us. A fun sequel to Gearbox's excellent shoot-and-loot games, the story of Borderlands 3 revolves around a cult known as The Children of the Vault...</p>
-        <a href="http://127.0.0.1:5000/PlayStation Plus Free Games For July 2024 Are Live Now'" class="btn btn-primary">Read</a>
+        <p class="card-text">PlayStation has released this month's batch of free games for PlayStation Plus subscribers: Borderlands 3, NHL 24, and Among Us. A fun sequel to Gearbox's excellent shoot-and-loot games, the story of Borderlands 3 revolves around a cult known as The Children of the Vault, billions of shiny weapons, and family drama. While the main storyline isn't the best, the four DLC expansions tell a much better story and one of them sort of sees Handsome Jack return to menace players. The timing on this addition to PS Plus is also pretty good, as the live-action Borderlands movie will hit theaters in August.Next on the list is EA Sports NHL 24. This version of the game included several new game features and upgraded modes, and the Exhaust Engine was used to create more authentic experiences on the ice. Double-check that both the PS5 and PS4 versions are free before claiming them.
+
+Lastly, you can gather some friends and wonder which one of them is a horrendous alien that defies mortal comprehension in Among Us. The game became a huge hit during the early days of the COVID-19 pandemic, and since then, it has remained a firm favorite as a social game with its frequent updates and nightmarish April Fools' jokes.
+
+If you've never played it, Among Us is all about holding a spaceship together as your crew works to return to civilization. The catch here is that one of your crewmates is a shape-shifting alien, and they'll be aiming to sabotage the ship and kill everyone aboard. The remaining humans have to finish their tasks and identify the Impostors before it's too late.
+
+As a bonus in July, PlayStation Plus members can also claim in-game rewards for Genshin Impact with an exclusive bundle. This will be available starting July 16 and includes the following items:
+
+160 Primogems
+Fragile Resin
+20 x Hero’s Wit
+30 x Mystic Enhancement Ore
+150,000 Mora</p>
+        <a href="http://127.0.0.1:5000/Xbox Servers Are Back Up After Extended Downtime" class="btn btn-primary">Read</a>
       </div>
     </div>
   </div>
 
-
-</div>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
