--- a/GoodGameCompany - NEWS/templates/Xbox Servers Are Back Up After Extended Downtime.html
+++ b/GoodGameCompany - NEWS/templates/Xbox Servers Are Back Up After Extended Downtime.html
@@ -57,35 +57,18 @@
   </div>
 </nav>
 
-
-<div class="container">
-  <div class="row">
-
   <div class="col-sm-6 mb-3 mb-sm-0">
     <div class="card">
       <div class="card-body">
             <img src="{{url_for('static',filename='img/7.png')}}" class="img-fluid" alt="...">
         <h5 class="card-title">Xbox Servers Are Back Up After Extended Downtime</h5>
-        <p class="card-text">Xbox's online servers went down on July 2, with some people reporting that they are having difficulty connecting to games and services on the platform. The issues were widespread and long-lived, as it took Microsoft hours to clear out the issues and get things working aga...</p>
-        <a href="http://127.0.0.1:5000/Xbox Servers Are Back Up After Extended Downtime" class="btn btn-primary">Read</a>
+        <p class="card-text">Xbox's online servers went down on July 2, with some people reporting that they are having difficulty connecting to games and services on the platform. The issues were widespread and long-lived, as it took Microsoft hours to clear out the issues and get things working again. As of 8:49 PM ET on July 2, however, Microsoft reported that the issues had been sufficiently addressed. After initially making no mention of it, the official Xbox server status website said sign-in services were having a "major outage." With a server network as large as Xbox's, your mileage may vary, but many players were unable to log in. Microsoft's own game accounts acknowledged the server troubles. "We apologize for the inconvenience," Microsoft said.
+
+The Xbox Support account said Microsoft is "aware that some users have been disconnected from Xbox Live." The company said it is "investigating" the matter. Just after 1 PM PT / 4 PM ET, it provided an update in which it said the "investigation is taking longer than expected."</p>
       </div>
     </div>
   </div>
 
-    <div class="col-sm-6 mb-3 mb-sm-0">
-    <div class="card">
-      <div class="card-body">
-            <img src="{{url_for('static',filename='img/12.png')}}" class="img-fluid" alt="...">
-        <h5 class="card-title">PlayStation Plus Free Games For July 2024 Are Live Now</h5>
-        <p class="card-text">PlayStation has released this month's batch of free games for PlayStation Plus subscribers: Borderlands 3, NHL 24, and Among Us. A fun sequel to Gearbox's excellent shoot-and-loot games, the story of Borderlands 3 revolves around a cult known as The Children of the Vault...</p>
-        <a href="http://127.0.0.1:5000/PlayStation Plus Free Games For July 2024 Are Live Now'" class="btn btn-primary">Read</a>
-      </div>
-    </div>
-  </div>
-
-
-</div>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
