--- a/GoodGameCompany - NEWS/templates/Last news.html
+++ b/GoodGameCompany - NEWS/templates/Last news.html
@@ -67,7 +67,7 @@
             <img src="{{url_for('static',filename='img/7.png')}}" class="img-fluid" alt="...">
         <h5 class="card-title">Xbox Servers Are Back Up After Extended Downtime</h5>
         <p class="card-text">Xbox's online servers went down on July 2, with some people reporting that they are having difficulty connecting to games and services on the platform. The issues were widespread and long-lived, as it took Microsoft hours to clear out the issues and get things working aga...</p>
-        <a href="#" class="btn btn-primary">Read</a>
+        <a href="http://127.0.0.1:5000/Xbox Servers Are Back Up After Extended Downtime" class="btn btn-primary">Read</a>
       </div>
     </div>
   </div>
@@ -79,6 +79,17 @@
         <h5 class="card-title">Destiny 2 Claws Of The Wolf God Roll Guide</h5>
         <p class="card-text">The Iron Banner is back and it brings a reprised version of a deadly pulse rifle you're going to want. Like everything else in Destiny 2 in the aftermath of The Final Shape, the Iron Banner has been altered. The PvP event now sports a two-week duration instead of one and...</p>
         <a href="#" class="btn btn-primary">Read</a>
+      </div>
+    </div>
+  </div>
+
+        <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+            <img src="{{url_for('static',filename='img/13.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Metal Gear Rising: Revengeance Slashes A Power-Hungry Senator And Its Own Price In New GOG Deal</h5>
+        <p class="card-text">"One of the best action games of the 2010s just got its price slashed almost in half, as you can pick up Metal Gear Rising: Revengeance for just $18 on GOG, until July 11. Like other GOG games, this is a DRM-free version of the classic Platinum Games adventure starring Rai...</p>
+        <a href="http://127.0.0.1:5000/Metal Gear Rising Revengeance Slashes A Power Hungry Senator And Its Own Price In New GOG Deal" class="btn btn-primary">Read</a>
       </div>
     </div>
   </div>
@@ -110,12 +121,15 @@
     <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Is Stardew Valley Cross-Platform?</h5>
-        <p class="card-text">Stardew Valley can be played with up to three friends, but there are some restrictions. Stardew Valley, the massive indie farming simulator, lets you and up to three friends run a farm together, via online play or couch co-op. However, since multiplayer was added post-lau...</p>
-        <a href="#" class="btn btn-primary">Read</a>
+            <img src="{{url_for('static',filename='img/14.png')}}" class="img-fluid" alt="...">
+        <h5 class="card-title">Haters Be Damned: Elden Ring Summoning Leads To Shadow Of The Erdtree's Best Moment</h5>
+        <p class="card-text">"Drake Hunter Igon is the best character in Shadow of the Erdtree, and he's the perfect argument for chilling out about using summons and game difficulty.Igon is the best character in Shadow of the Erdtree. He's the best character in all of Elden Ring, in fact. He might be...</p>
+        <a href="http://127.0.0.1:5000/Haters Be Damned Elden Ring Summoning Leads To Shadow Of The Erdtrees Best Moment" class="btn btn-primary">Read</a>
       </div>
     </div>
   </div>
+
+
 
 
 </div>
