--- a/GoodGameCompany - NEWS/templates/Registration.html
+++ b/GoodGameCompany - NEWS/templates/Registration.html
@@ -56,17 +56,19 @@
     </div>
   </div>
 </nav>
+<div class="container mt-5">
+  <h2>Name</h2>
+  <form method="name">
+    <input type="text">
+  <h2>Password</h2>
+  <form method="password">
+    <input type="text">
+  <h2>Email</h2>
+  <form method="email">
+    <input type="text">
+</div>
 
-    <section class="container-fluid reg">
-      <div class="form-floating mb-3">
-  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-  <label for="floatingInput">Email address</label>
-</div>
-<div class="form-floating">
-  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-  <label for="floatingPassword">Password</label>
-</div>
-    </section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
